GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Legal_form__c.field-meta.xml
<CustomField>
    <fullName>Legal_form__c</fullName>
    <label>Legal form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Company in the form of a General Partnership</fullName>
            </value>
            <value>
                <fullName>Civil Company in the form of a Limited Company</fullName>
            </value>
            <value>
                <fullName>Civile Company in the form of a Civile Company with Limited Liability</fullName>
            </value>
            <value>
                <fullName>Civile Company in the form of a Private Company with Limited Liability</fullName>
            </value>
            <value>
                <fullName>Co-operative Company</fullName>
            </value>
            <value>
                <fullName>Co-operative Company with Limited Liability</fullName>
            </value>
            <value>
                <fullName>European Company (Societas Europaea)</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>International Organisation</fullName>
            </value>
            <value>
                <fullName>Non-profit Organisation</fullName>
            </value>
            <value>
                <fullName>Ordinary Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Private Company with Limited Liability</fullName>
            </value>
            <value>
                <fullName>Public Limited Company</fullName>
            </value>
            <value>
                <fullName>Other Legal Form</fullName>
            </value>
            <value>
                <fullName>Association Internationale</fullName>
            </value>
            <value>
                <fullName>Association Sans But Lucratif</fullName>
            </value>
            <value>
                <fullName>Etablissement Public à Caractère Industriel et Commercial</fullName>
            </value>
            <value>
                <fullName>Société Anonyme</fullName>
            </value>
            <value>
                <fullName>Société Anonyme à Responsabilités Limitées</fullName>
            </value>
            <value>
                <fullName>Société à Actions Simplifiées</fullName>
            </value>
            <value>
                <fullName>Société Civile sous forme de Société Anonyme</fullName>
            </value>
            <value>
                <fullName>Société Civile sous forme de Société Coopérative à Responsabilité Limitée</fullName>
            </value>
            <value>
                <fullName>Société Civile sous forme de Société en Nom Collectif</fullName>
            </value>
            <value>
                <fullName>Société Civile sous forme de Société Privée à Responsabilité Limitée</fullName>
            </value>
            <value>
                <fullName>Société Coopérative</fullName>
            </value>
            <value>
                <fullName>Société Coopérative à Responsabilité Limitée</fullName>
            </value>
            <value>
                <fullName>Société Européenne (Societas Europaea)</fullName>
            </value>
            <value>
                <fullName>Société en Commandite Simple</fullName>
            </value>
            <value>
                <fullName>Société en Nom Collectif</fullName>
            </value>
            <value>
                <fullName>Société Mutualiste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>