GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Legal_ID__c.field-meta.xml
<CustomField>
    <fullName>Legal_ID__c</fullName>
    <description>Depending on the country / market, relevant legal ID</description>
    <label>Legal ID</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>Siret Number</fullName>
            </value>
            <value>
                <fullName>KvK</fullName>
            </value>
            <value>
                <fullName>HR NR</fullName>
            </value>
            <value>
                <fullName>Registered Company Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>