GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Main_Admin__c.field-meta.xml
<CustomField>
    <fullName>Main_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>E4B Admin</inlineHelpText>
    <label>Main Admin</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts (Main Admin)</relationshipLabel>
    <relationshipName>Business_Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>