GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Merged_Date__c.field-meta.xml
<CustomField>
    <fullName>Merged_Date__c</fullName>
    <label>Merged Date</label>
    <type>Date</type>
</CustomField>