GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/MICE__c.field-meta.xml
<CustomField>
    <fullName>MICE__c</fullName>
    <label>MICE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Organiser</fullName>
            </value>
            <value>
                <fullName>Event Agency</fullName>
            </value>
            <value>
                <fullName>TMC M&amp;I</fullName>
            </value>
            <value>
                <fullName>PCO</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>Supplier partner</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>CVB</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>