GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Missing_Account_PCC_Code__c.field-meta.xml
<CustomField>
    <fullName>Missing_Account_PCC_Code__c</fullName>
    <label>Missing Corp Account PCC Code</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>