GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Most_Recent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Contract</label>
    <referenceTo>Business_Contract__c</referenceTo>
    <relationshipLabel>Business Accounts</relationshipLabel>
    <relationshipName>Business_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>