GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/No_Continent_Account_CTC__c.field-meta.xml
<CustomField>
    <fullName>No_Continent_Account_CTC__c</fullName>
    <label>No. Continent Account CTC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>