GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Num_of_travellers__c.field-meta.xml
<CustomField>
    <fullName>Num_of_travellers__c</fullName>
    <description>according to the number of employees in company.</description>
    <label>Number of Travellers %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>