GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Owned_By__c</fullName>
    <label>Owned By</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Eurostar for Business</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>