GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to main parent account</description>
    <label>Main Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>Business_Account__c.RecordTypeId</valueField>
        </filterItems>
        <infoMessage>Allows only selection of records of the same record type as current record</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Business Accounts</relationshipLabel>
    <relationshipName>Business_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>