GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>When adding Phone numbers please do the following:

remove any punctuation or spaces

add the prefix for the country code without the “+” : eg:

BE: 0032

DE: 0049

FR: 0033

NL: 0031

UK: 0044</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>