GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Professional_Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Professional_Association_Type__c</fullName>
    <label>Professional Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Manager Associations</fullName>
            </value>
            <value>
                <fullName>Agencies Associations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>