GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Reason_for_Travel__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Travel__c</fullName>
    <label>Reason for Travel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Home Work Commuting</fullName>
            </value>
            <value>
                <fullName>Internal (meetings..)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>