GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Red_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Red_Account_Type__c</fullName>
    <description>Used to classify the agents based on the Red corporate framework. Each level of classification gives various benefits</description>
    <label>Red Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCF1</fullName>
            </value>
            <value>
                <fullName>TCF2</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <isActive>false</isActive>
                <label>OTHER</label>
            </value>
            <value>
                <fullName>PROSPECT</fullName>
                <isActive>false</isActive>
                <label>PROSPECT</label>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
                <isActive>false</isActive>
                <label>Unmanaged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>