GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Red_NewAccountWebformCorporate__c.field-meta.xml
<CustomField>
    <fullName>Red_NewAccountWebformCorporate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on the webform on thalys site . All appliactions for corporate fares go through this webform. action is required upon receipt of a request, and a tick box to remove the required action once it has been completed</description>
    <label>Red Webform</label>
    <type>Checkbox</type>
</CustomField>