GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Reg_Address_Same_Trading__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address_Same_Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Address Same as Trading</label>
    <type>Checkbox</type>
</CustomField>