GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Reg_Company_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_Company_No__c</fullName>
    <label>Registered Company Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>