GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/RIT_Comms_Email__c.field-meta.xml
<CustomField>
    <fullName>RIT_Comms_Email__c</fullName>
    <label>RIT Comms Email</label>
    <type>Email</type>
</CustomField>