GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Sales_Team_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Flag__c</fullName>
    <description>Visual indicator of sales team</description>
    <formula>CASE(
	Sales_Team__c,
	&quot;Red&quot;, &quot;Red Sales Team&quot; &amp; &quot; &quot; &amp; IMAGE(&quot;/resource/flag_red&quot;, &quot;Red Sales Team&quot;),
	&quot;Blue&quot;, &quot;Blue Sales Team&quot; &amp; &quot; &quot; &amp; IMAGE(&quot;/resource/flag_Blue&quot;, &quot;Blue Sales Team&quot;),
	&quot;Purple&quot;, &quot;Purple Sales Team&quot; &amp; &quot; &quot; &amp; IMAGE(&quot;/resource/Flag_purple&quot;, &quot;Purple Sales Team&quot;),
	&quot;&quot;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team Flag</label>
    <type>Text</type>
</CustomField>