GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/second_signatory__c.field-meta.xml
<CustomField>
    <fullName>second_signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Signatory Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts (2nd Signatory Contact)</relationshipLabel>
    <relationshipName>second_signatory</relationshipName>
    <type>Lookup</type>
</CustomField>