GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Secondary_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account_Owner_Name__c</fullName>
    <formula>Secondary_Account_Owner__r.FirstName + &#39; &#39; +  Secondary_Account_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Account Owner Name</label>
    <type>Text</type>
</CustomField>