GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <label>Registered Address City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>