GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <label>Registered Address Postcode</label>
    <length>120</length>
    <type>Text</type>
</CustomField>