GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Signatory_Contact__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signatory Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Accounts (Signatory Contact)</relationshipLabel>
    <relationshipName>Signatory_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>