GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Status_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Contract__c</fullName>
    <label>Status of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contract</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>