GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Strategic_Level__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Level__c</fullName>
    <description>Classification based on turnover and political partenrship</description>
    <label>Strategic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Very Important</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>