GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/TMC_BE_Contact__c.field-meta.xml
<CustomField>
    <fullName>TMC_BE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC BE Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Accounts</relationshipLabel>
    <relationshipName>Business_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>