GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/TMC_DE__c.field-meta.xml
<CustomField>
    <fullName>TMC_DE__c</fullName>
    <label>TMC DE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TMC</valueSetName>
    </valueSet>
</CustomField>