GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/TMC_UK_Contact__c.field-meta.xml
<CustomField>
    <fullName>TMC_UK_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC UK Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Accounts (TMC UK Contact)</relationshipLabel>
    <relationshipName>Business_Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>