GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/TMC_US_Contact__c.field-meta.xml
<CustomField>
    <fullName>TMC_US_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMC US Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Accounts (TMC US Contact)</relationshipLabel>
    <relationshipName>Business_Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>