GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Trade_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Trade_Affiliation__c</fullName>
    <label>Trade Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>