GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Trade_Contract_Merged__c.field-meta.xml
<CustomField>
    <fullName>Trade_Contract_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Contract Merged</label>
    <type>Checkbox</type>
</CustomField>