GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Travel_Policy__c.field-meta.xml
<CustomField>
    <fullName>Travel_Policy__c</fullName>
    <label>Travel Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Best Buy</fullName>
            </value>
            <value>
                <fullName>1st only for board members</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Free/No Travel Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>