GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Groups / Tours / Niche</fullName>
            </value>
            <value>
                <fullName>Inbounders / DMC</fullName>
            </value>
            <value>
                <fullName>Influencers</fullName>
            </value>
            <value>
                <fullName>Institutional Partners</fullName>
            </value>
            <value>
                <fullName>Leisure Agent</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prof. Association</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Suppliers</fullName>
            </value>
            <value>
                <fullName>Techno Providers</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Tourist Office</fullName>
            </value>
            <value>
                <fullName>Travel Trade Press</fullName>
            </value>
            <value>
                <fullName>Reward Redemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>