GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <formula>IF(
    FCE_London_Active__c, FCE_London__c,
    IF(
        FCE_Continent_Active__c, FCE_Continent__c,
        IF(
            GDS_Code_Active__c, GDS_Code__c,
            IF(
                Corporate_Code_Active__c, Corporate_Code__c,
                IF(
                    GND_BE_Continent_Active__c, GND_BE_Continent__r.Name,
                    IF(
                        GND_BE_London_Active__c, GND_BE_London__r.Name,
                        IF(
                            GND_NL_Continent_Active__c, GND_NL_Continent__r.Name,
                            IF(
                                GND_NL_London_Active__c, GND_NL_London__r.Name,
                                NULL
                            )
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Code</label>
    <type>Text</type>
</CustomField>