GearsetPOC/force-app/main/default/objects/Business_Account__c/fields/X2nd_API_Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>X2nd_API_Technical_Support__c</fullName>
    <label>2nd API Technical Support Email</label>
    <type>Email</type>
</CustomField>