GearsetPOC/force-app/main/default/objects/Business_Account__c/recordTypes/Agency_Account.recordType-meta.xml
<RecordType>
    <fullName>Agency_Account</fullName>
    <active>true</active>
    <label>Agency Account</label>
</RecordType>