GearsetPOC/force-app/main/default/objects/Business_Account__c/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <label>Eurostar for Business</label>
</RecordType>