GearsetPOC/force-app/main/default/objects/Business_Account__c/recordTypes/MICE_Account.recordType-meta.xml
<RecordType>
    <fullName>MICE_Account</fullName>
    <active>true</active>
    <label>MICE Account</label>
</RecordType>