GearsetPOC/force-app/main/default/objects/Business_Account__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Accounts that are not clients</description>
    <label>Other</label>
</RecordType>