GearsetPOC/force-app/main/default/objects/Business_Account__c/recordTypes/To_Deprecate.recordType-meta.xml
<RecordType>
    <fullName>To_Deprecate</fullName>
    <active>true</active>
    <label>To Deprecate</label>
</RecordType>