GearsetPOC/force-app/main/default/objects/Business_Account__c/listViews/Agency_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>Agency_Business_Accounts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Business_Account__c.Agency_Account</value>
    </filters>
    <label>Agency Business Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Admin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>