GearsetPOC/force-app/main/default/objects/Business_Account__c/listViews/Booking_Market_UK.listView-meta.xml
<ListView>
    <fullName>Booking_Market_UK</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Business_Account__c.Agency_Account</value>
    </filters>
    <label>Booking Market ~ UK</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Trade_Team</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>