GearsetPOC/force-app/main/default/objects/Business_Account__c/listViews/Concession.listView-meta.xml
<ListView>
    <fullName>Concession</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Concession__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Concession</label>
    <sharedTo>
        <role>Trade_Team</role>
    </sharedTo>
</ListView>