GearsetPOC/force-app/main/default/objects/Business_Account__c/listViews/Contract_type_Corporate.listView-meta.xml
<ListView>
    <fullName>Contract_type_Corporate</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <label>Contract type ~ Corporate</label>
    <sharedTo>
        <role>Trade_Team</role>
    </sharedTo>
</ListView>